fix(content-switcher): align low contrast style

--- a/packages/web-components/src/components/content-switcher/content-switcher.scss
+++ b/packages/web-components/src/components/content-switcher/content-switcher.scss
@@ -10,9 +10,11 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/config' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
-@use '@carbon/styles/scss/utilities/convert' as *;
+@use '@carbon/styles/scss/utilities' as *;
+@use '@carbon/styles/scss/utilities/convert' as convert;
 @use '@carbon/styles/scss/components/content-switcher/content-switcher' as *;
 @use '@carbon/styles/scss/layout' as *;
+@use '@carbon/styles/scss/type' as *;
 
 // https://github.com/carbon-design-system/carbon/issues/11408
 @include content-switcher;
@@ -99,7 +101,7 @@ $css--plex: true !default;
 :host(#{$prefix}-content-switcher-item:first-of-type)
   .#{$prefix}--content-switcher-btn {
   border-end-start-radius: $spacing-02;
-  // border-inline-start: rem(1px) solid $border-inverse;
+  border-inline-start: rem(1px) solid $border-inverse;
   border-start-start-radius: $spacing-02;
 
   &::before {
@@ -114,6 +116,27 @@ $css--plex: true !default;
   border-start-end-radius: $spacing-02;
 }
 
+//LOW CONTRAST
 :host([lowcontrast]) {
   @extend .#{$prefix}--content-switcher--low-contrast;
+
+  // First item (only in low contrast)
+  &:host(#{$prefix}-content-switcher-item:first-of-type)
+    .#{$prefix}--content-switcher-btn:not([disabled]) {
+    border-end-start-radius: convert.to-rem(4px);
+    border-inline-start: convert.to-rem(1px) solid $border-strong;
+    border-start-start-radius: convert.to-rem(4px);
+
+    &::before {
+      background-color: transparent;
+    }
+  }
+
+  // Last item (only in low contrast)
+  &:host(#{$prefix}-content-switcher-item:last-of-type)
+    .#{$prefix}--content-switcher-btn:not([disabled]) {
+    border-end-end-radius: convert.to-rem(4px);
+    border-inline-end: convert.to-rem(1px) solid $border-strong;
+    border-start-end-radius: convert.to-rem(4px);
+  }
 }
